--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hbomax-clonev2",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
     "@fontsource/urbanist": "^4.5.11",
@@ -45,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2"
   }
 }
